# ThinkFish2

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
tests/: test_chessio.py  test_engine.py
thinkfish2/: chessio.py  cli.py  engine.py  llm.py  review.py  server.py  types.py
thinkfish2/tools/: __init__.py
